<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MCBedrockConnector.AppBarOverlay">

            <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="409dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextHostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hostname" />

            <EditText
                android:id="@+id/editTextPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port" />

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/restartServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial" />

            <ListView
                android:id="@+id/serverList"
                android:layout_width="match_parent"
                android:layout_height="277dp" />

        </LinearLayout>
    </LinearLayout>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/addServer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_marginEnd="@dimen/fab_margin"
    android:layout_marginBottom="16dp"
    app:srcCompat="@android:drawable/ic_menu_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
